<resources>
    <string name="app_name">ASD Playdate</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="find">Find</string>
    <string name="chat">Chat</string>
    <string name="api_key">AIzaSyCodhCiZUwBKGw2tZ73tln3tdKOmiRhWoQ</string>
    <string name="broadcast_duration">Broadcast Duration</string>
    <string name="dont_ask">Don\'t ask me again</string>
    <string name="go">GO</string>
    <string name="optional_message">Optional message</string>
    <string name="broadcast_text">Broadcast your location here\nto see results near you</string>
    <string name="broadcast">Broadcast</string>
    <string name="ask_to_chat">Ask to Chat</string>
    <string name="list">LIST</string>
    <string name="request_chat">Send Chat\nRequest</string>
    <string name="btnSend">Send</string>
    <string name="et_sendMessageHint">Enter a Message</string>
    <string name="tv_chatInfoName">Chat With John</string>
    <string name="userImageLbl">User Image</string>
    <string name="title_activity_chat">Chat</string>
    <string name="email">Email Address</string>
    <string name="con_pass">Confirm Password</string>
    <string name="pass">Password</string>
    <string name="create_acc">Create Account</string>
    <string name="already_acc"><u>Already have an account? Login here</u></string>
    <string name="login">Login</string>
    <string name="title_activity_profile">Profile</string>
    <string name="parse_app_id">vlQeoPQb1NntXmtR0FZwDMBtwPRtYED1iea5Of1G</string>
    <string name="parse_client_key">rmYCT6zp2IvmnggeIr9PmlckyEYy1RrPQMNGFVA1</string>
    <string name="view_profile_dialog_title">User Profile</string>
    <string name="button_ok">OK</string>
    <string name="duration_min">1 min.</string>
    <string name="duration_max">120 min.</string>
    <string name="title_activity_settings_v2">Settings</string>
    <string name="title_activity_profile_activity_v2">Profile</string>
    <string name="minutes">\u0020min.</string>
    <string name="miles">mi.</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="logout">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="edit_broadcast_message">Insert Broadcast Message Here</string>
    <string name="distance_min">1 mi.</string>
    <string name="distance_max">5 mi.</string>
    <string name="missing_parent_first">Please enter your first name.</string>
    <string name="missing_parent_last">Please enter your last name.</string>
    <string name="missing_child_name">Please enter your child\'s name.</string>
    <string name="missing_age">Please enter your child\'s age.</string>
    <string name="missing_gender">Please select your child\'s gender.</string>
    <string name="missing_city">Please enter your city name.</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="incorrect_passwords">Passwords do not match. Try again.</string>
    <string name="updated_profile">Your profile info was successfully updated.</string>
    <string name="tap_twice_send_chat">Tap twice to send a chat request</string>
    <string name="location_permission_needed"><![CDATA[Location permission needed. Open Android settings -> ASD Playdate -> Permissions to enable.]]></string>
    <string name="refresh">Refresh</string>
    <string name="age">Age</string>
    <string name="no_convos_found">No conversations to display</string>
    <string name="tap_send_chat">Tap to send a chat request</string>
    <string name="no_results_found">No results found. Please try again later.</string>
    <string name="users_have_conversation">You already have an active conversation with this user.</string>
    <string name="chat_with">Chat with</string>
    <string name="child">Child</string>
    <string name="expiration">Chat Expires:</string>
    <string name="broadcast_msg_label">Broadcast Message:</string>
    <string name="miles_from_you">miles from you</string>
</resources>
