<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/editText"
            android:singleLine="true"
            android:background="@color/editTextBG"
            android:hint="@string/email"
            android:layout_marginTop="60dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/editText2"
            android:layout_gravity="center_horizontal"
            android:singleLine="false"
            android:background="@color/editTextBG"
            android:layout_marginTop="40dp"
            android:hint="@string/pass"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/editText3"
            android:layout_gravity="center_horizontal"
            android:singleLine="false"
            android:background="@color/editTextBG"
            android:layout_marginTop="40dp"
            android:hint="@string/con_pass"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_acc"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_acc"
            android:layout_marginTop="10dp"
            android:id="@+id/textView"
            android:textColor="@color/link"
            android:layout_gravity="center_horizontal"
            android:singleLine="false"/>
    </LinearLayout>
</LinearLayout>