<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/fl_map_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <com.google.android.gms.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <Button
        android:id="@+id/btn_list"
        android:layout_gravity="bottom|right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"/>
    <FrameLayout
        android:id="@+id/fl_broadcast_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <ImageView
            android:id="@+id/iv_broadcast_bar"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center_vertical|left"
            android:src="@drawable/broadcast_bar"/>
        <Button
            android:id="@+id/btn_broadcast"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broadcast"/>
        <TextView
            android:id="@+id/tv_broadcast_bar"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:text="@string/broadcast_text"/>
    </FrameLayout>
</FrameLayout>