<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_broadcast_duration"
        android:layout_margin="5dp"
        android:text="@string/broadcast_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <SeekBar
        android:id="@+id/sb_broadcast_duration"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:max="50"/>

    <EditText
        android:id="@+id/et_message"
        android:hint="@string/optional_message"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/ll_checked"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cb_dont_ask_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_checked"
            android:text="@string/dont_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
<!--
    <Button
        android:id="@+id/btn_go"
        android:text="@string/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>-->


</LinearLayout>