<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="edu.chapman.cpsc370.asdplaydate.activities.SettingsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="editProfile"
            android:layout_marginBottom="10dp"
            android:id="@+id/ll_editProfile">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Edit My Profile"
                android:layout_centerVertical="true"
                android:id="@+id/textViewEditProfile"
                android:layout_alignParentLeft="true"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/gray_right_arrow"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            />


        <Space
            android:layout_width="20px"
            android:layout_height="40px"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Default Search Radius:"
                    android:id="@+id/textViewSearchRadius"/>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textViewMileUpdate"
                    android:text="3 mi."/>

            </LinearLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/distance_min"
                    android:id="@+id/textViewSearchRange"/>

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBarSearchRadius"
                    android:layout_weight="0.81"
                    android:indeterminate="false"
                    android:max="4"
                    android:progress="2"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/distance_max"
                    android:id="@+id/textViewSearchInidcatorLarge"/>

            </LinearLayout>
        </LinearLayout>


        <Space
            android:layout_width="20px"
            android:layout_height="40px"
            />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <Space
            android:layout_width="20px"
            android:layout_height="40px"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Default Broadcast Duration:"
                    android:id="@+id/textView3"/>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textViewDurationUpdate"
                    android:text="60 min."/>

            </LinearLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/duration_min"
                    android:id="@+id/textViewBroadcastDurationLow"
                    />

                <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBarBroadcastDuration"
                    android:indeterminate="false"
                    android:contentDescription="Minutes"
                    android:progress="59"
                    android:max="119"
                    android:contextClickable="false"
                    android:layout_weight="0.86"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/duration_max"
                    android:id="@+id/textView4"/>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="20px"
            android:layout_height="40px"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <Space
            android:layout_width="20px"
            android:layout_height="40px"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Default Broadcast Message"
                android:id="@+id/textViewBroadcastMessage"/>

        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextBroadcastMessage"
            android:hint="@string/edit_broadcast_message"/>

        <Space
            android:layout_width="20px"
            android:layout_height="40px"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Prompt Before Broadcast"
                android:id="@+id/textViewPromptBeforeBroadcast"
                android:gravity="left"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchPromptBroadcast"
                    android:checked="true"
                    />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <RelativeLayout
            android:onClick="logout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:clickable="true"
            android:id="@+id/ll_logout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Logout"
                android:id="@+id/textViewLogout"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/gray_right_arrow"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

    </LinearLayout>
</RelativeLayout>
